<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_lightGray"
    android:orientation="vertical"
    tools:context="com.dwight.customsnackbar.MainActivity">

    <RelativeLayout
        android:id="@+id/mainRL"
        android:layout_width="match_parent"
        android:layout_height="434dp">

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="Countdown Timer Info"
            android:textColor="@color/color_Black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="240dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnONE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:onClick="showONE"
            android:text="One Line SB"
            android:textColor="@color/color_deepBlue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTWO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="80dp"
            android:onClick="showTWO"
            android:text="Two Line SB"
            android:textColor="@color/color_Purple"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFOUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="80dp"
            android:onClick="showFOUR"
            android:text="Four Line SB"
            android:textColor="@color/color_Black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSBAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="135dp"
            android:background="@color/color_Black"
            android:onClick="makeSB"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Snackbar with an Action Button"
            android:textColor="@color/color_White"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp"
            app:srcCompat="@drawable/pwkeyb" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ONE_LINE_SB"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/color_Transparent"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvONE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/one_text"
            android:textColor="@color/color_deepBlue"
            android:textSize="24sp"
            android:textStyle="bold" />

</RelativeLayout>

    <RelativeLayout
        android:id="@+id/TWO_LINE_SB"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/color_Transparent"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTWO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/two_text"
            android:textColor="@color/color_Purple"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/FOUR_LINE_SB"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/color_Transparent"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFOUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/four_text"
            android:textColor="@color/color_Black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ACTION_BTN_SNACKBAR"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/color_Transparent"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:paddingLeft="5dp"
            android:text="@string/action_text"
            android:textColor="@color/color_Black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="95dp"
            android:background="@color/color_Transparent"
            android:focusable="false"
            android:text="@string/snackbar_action"
            android:textColor="@color/color_Red"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>